[package]
name = "fall"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
bytemuck = { version = "1.8.0", features = ["derive"] }
clap = { version = "3.1.6", features = ["derive"] }
env_logger = "0.9.0"
legion = "0.4.0"
log = "0.4.14"
mappy = { git = "https://github.com/chaynabors/mappy" }
nalgebra = "0.30.1"
nalgebra-glm = "0.16.0"
nom = "7.1.1"
parry3d = "0.8.0"
rendering_util = { git = "https://github.com/chaynabors/rendering_util" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tobj = "3.2.1"
tokio = { version = "1.17.0", features = ["full"] }
wgpu = "0.12.0"
winit = "0.26.1"
